# benchlab

./: .gitignore  README.md  helper.sh  latency_results.csv  latency_results55_70.csv  nsysdecode.py  onelayer.py  profiler.py  profiler2.py  pytorch_square.py  test_cuda.py
microbench/: batch_call_generate.py  flash_attention.py  main.py  nsys2.py  nsys3.py  onelayeriter.py  profilingdecode.py  pyproject.toml  test.ipynb  test_cuda  test_cuda.cu
microbench/nsys_results/: ampere_sgemm_128x32_tn.md  ampere_sgemm_128x64_tn.md  decode_profile63.txt  decode_profile64.txt  decode_profile65.txt  decode_profile66.txt  gemm_tilesize128x128x8.md  gemm_tilesize64x256x8.md  linear_10runs_bs64.txt  linear_10runs_bs65.txt  linear_1runs_bs64.txt  stats_bs64.txt  stats_bs65.txt
microbench/tmp/: diffgen6465.txt  test_trace_4.json
other/: grpo.py  pyproject.toml
thank_you/: blog.md  dataset_add_thanks.py  launch_tgi_and_run.sh  measure.slurm  measure_bsb.slurm  measure_dtype.slurm  measure_energy.py  measure_energy_batch.py  measure_energy_bsb.py  measure_energy_devices.py  measure_energy_tgi.py  measure_tgi.slurm  playground.ipynb  plot.ipynb  ultrachat_energy_measurements.csv
videos/: anime_diff.py  combined_results.csv  contentv_benchmark.py  fusionx_benchmark.py  ltx.py  notes.md  pyproject.toml  results.ipynb  text2video_energy_benchmark.csv
videos/results/: plot.ipynb
videos/scripts/: animateDiff.py  animateDiff.slurm  cogX.py  cogX.slurm  contentV.slurm  ltx.py  ltx.slurm  mochi.py  mochi.slurm  mochi_native.py  wan2_1.py  wan2_1.slurm  wan2_1_native.py
(+33 files in other folders)
